[gd_scene load_steps=9 format=3 uid="uid://dyrpsnraose2n"]

[ext_resource type="Texture2D" uid="uid://cjjwlc7dkaotx" path="res://assets/Sprites/Cards/kenney_playing-cards-pack/PNG/Cards (large)/card_clubs_J.png" id="1_ejfkd"]
[ext_resource type="Script" uid="uid://gmn1ddhih28d" path="res://resources/Card Resources/cardclicker.gd" id="2_ejfkd"]
[ext_resource type="Script" uid="uid://bxg63s5qd73ue" path="res://resources/Card Resources/card.gd" id="2_ymwpd"]
[ext_resource type="Texture2D" uid="uid://dxwji37u4j8a1" path="res://assets/Sprites/Cards/kenney_playing-cards-pack/PNG/Cards (large)/card_back.png" id="4_mucyl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_idd6q"]
size = Vector2(40, 58)

[sub_resource type="Animation" id="Animation_j2llb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CardBackSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CardBackSprite:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}

[sub_resource type="Animation" id="Animation_mucyl"]
resource_name = "card_flip"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CardBackSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.100000024, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CardBackSprite:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, -1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.1998402),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.1, 1), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [-1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j2llb"]
_data = {
&"RESET": SubResource("Animation_j2llb"),
&"card_flip": SubResource("Animation_mucyl")
}

[node name="Card" type="Node2D"]
script = ExtResource("2_ymwpd")
value = null
suit = null
backtexture = null
custom_default_scale = null

[node name="Area2D" type="Area2D" parent="." groups=["cards"]]
script = ExtResource("2_ejfkd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_idd6q")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../CardSprite")
libraries = {
&"": SubResource("AnimationLibrary_j2llb")
}

[node name="CardBackSprite" type="Sprite2D" parent="."]
texture = ExtResource("4_mucyl")

[node name="CardSprite" type="Sprite2D" parent="."]
z_index = -1
texture = ExtResource("1_ejfkd")

[connection signal="card_action" from="Area2D" to="." method="_on_area_2d_card_action"]
[connection signal="card_release" from="Area2D" to="." method="_on_area_2d_card_release"]
[connection signal="mouse_entered" from="Area2D" to="CardSprite" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="CardSprite" method="_on_area_2d_mouse_exited"]
